<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/insert_sql"
        android:ellipsize="none"
        android:ems="10"
        android:hint="@string/insert_sql"
        android:inputType="textPersonName"
        android:text="@string/nothing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRunUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/run_update"
        app:layout_constraintLeft_toRightOf="@id/btnRunQuery"
        app:layout_constraintTop_toBottomOf="@id/edtInput" />

    <Button
        android:id="@+id/btnRunQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="150dp"
        android:text="@string/run_query"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtInput" />

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRunQuery" />
</androidx.constraintlayout.widget.ConstraintLayout>